Checkbox added, SFUtil added

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea97a2">  <td>20/01/10 11:37:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTaskTest.app_launch()[pri:2, instance:qa.NewTaskTest@3b088d51]">app_launch</td> 
+<tr bgcolor="ea97a2">  <td>20/01/10 17:45:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewOpportunities.app_launch()[pri:2, instance:qa.NewOpportunities@3b088d51]">app_launch</td> 
   <td>main@142555199</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>20/01/10 11:37:40</td>   <td>13244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTaskTest.create_new_lead()[pri:3, instance:qa.NewTaskTest@3b088d51]">create_new_lead</td> 
+<tr bgcolor="ea97a2">  <td>20/01/10 17:45:39</td>   <td>10417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewOpportunities.create_new_opportunities()[pri:3, instance:qa.NewOpportunities@3b088d51]">create_new_opportunities</td> 
   <td>main@142555199</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>20/01/10 11:37:43</td>   <td>15731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTaskTest.fill_form1()[pri:4, instance:qa.NewTaskTest@3b088d51]">fill_form1</td> 
+<tr bgcolor="ea97a2">  <td>20/01/10 17:45:43</td>   <td>13710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewOpportunities.fill_form1()[pri:4, instance:qa.NewOpportunities@3b088d51]">fill_form1</td> 
   <td>main@142555199</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>20/01/10 11:37:21</td>   <td>-6359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTaskTest.login()[pri:1, instance:qa.NewTaskTest@3b088d51]">login</td> 
+<tr bgcolor="ea97a2">  <td>20/01/10 17:45:22</td>   <td>-6918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewOpportunities.login()[pri:1, instance:qa.NewOpportunities@3b088d51]">login</td> 
   <td>main@142555199</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>20/01/10 11:37:49</td>   <td>22168</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTaskTest.tierDown()[pri:0, instance:qa.NewTaskTest@3b088d51]">&lt;&lt;tierDown</td> 
+<tr bgcolor="ea97a2">  <td>20/01/10 17:45:43</td>   <td>13961</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewOpportunities.tierDown()[pri:0, instance:qa.NewOpportunities@3b088d51]">&lt;&lt;tierDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142555199</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>20/01/10 11:37:08</td>   <td>-18979</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTaskTest.tierUp()[pri:0, instance:qa.NewTaskTest@3b088d51]">&gt;&gt;tierUp</td> 
+<tr bgcolor="ea97a2">  <td>20/01/10 17:45:11</td>   <td>-17702</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewOpportunities.tierUp()[pri:0, instance:qa.NewOpportunities@3b088d51]">&gt;&gt;tierUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142555199</td>   <td></td> </tr>
 </table>
