--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\akash.verma\AppData\Local\Temp\testng-eclipse--1770416288\testng-customsuite.xml</span>
+                    <span>C:\Users\akash.verma\AppData\Local\Temp\testng-eclipse-1388613194\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,22 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewOpportunities" hash-for-method="app_launch">app_launch</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewTaskTest" hash-for-method="app_launch">app_launch</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewOpportunities" hash-for-method="create_new_opportunities">create_new_opportunities</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewTaskTest" hash-for-method="create_new_lead">create_new_lead</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewOpportunities" hash-for-method="fill_form1">fill_form1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewTaskTest" hash-for-method="fill_form1">fill_form1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewOpportunities" hash-for-method="login">login</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="qa.NewTaskTest" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,7 +135,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">qa.NewOpportunities</span>
+              <span class="class-name">qa.NewTaskTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -147,9 +147,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="create_new_opportunities">
-                  </a> <!-- create_new_opportunities -->
-                  <span class="method-name">create_new_opportunities</span>
+                  <a name="create_new_lead">
+                  </a> <!-- create_new_lead -->
+                  <span class="method-name">create_new_lead</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -171,7 +171,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\akash.verma\AppData\Local\Temp\testng-eclipse--1770416288\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\akash.verma\AppData\Local\Temp\testng-eclipse-1388613194\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;qa.NewOpportunities&quot;/&gt;
+      &lt;class name=&quot;qa.NewTaskTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -223,25 +223,25 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'app_launch')
-data.setCell(0, 2, 'qa.NewOpportunities')
-data.setCell(0, 3, 11953);
+data.setCell(0, 2, 'qa.NewTaskTest')
+data.setCell(0, 3, 10514);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'login')
-data.setCell(1, 2, 'qa.NewOpportunities')
-data.setCell(1, 3, 6702);
+data.setCell(1, 2, 'qa.NewTaskTest')
+data.setCell(1, 3, 7537);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'create_new_opportunities')
-data.setCell(2, 2, 'qa.NewOpportunities')
-data.setCell(2, 3, 3309);
+data.setCell(2, 1, 'create_new_lead')
+data.setCell(2, 2, 'qa.NewTaskTest')
+data.setCell(2, 3, 2699);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'fill_form1')
-data.setCell(3, 2, 'qa.NewOpportunities')
-data.setCell(3, 3, 356);
+data.setCell(3, 2, 'qa.NewTaskTest')
+data.setCell(3, 3, 2330);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,30 +267,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">qa.NewOpportunities</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">qa.NewTaskTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">tierUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">11303 ms</span>
+                <span class="method-start">9903 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">app_launch</span>
-                <span class="method-start">18011 ms</span>
+                <span class="method-start">17449 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">create_new_opportunities</span>
-                <span class="method-start">29965 ms</span>
+                <span class="method-name">create_new_lead</span>
+                <span class="method-start">27964 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">fill_form1</span>
-                <span class="method-start">33275 ms</span>
+                <span class="method-start">30665 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tierDown</span>
-                <span class="method-start">33632 ms</span>
+                <span class="method-start">32997 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
